static/messages.css
/* ... */
.menu-item {
  padding: 7px 12px;
  cursor: pointer;
}

.menu-item:hover {
  background: #007bff;
  color: #fff;
}

.menu-item.disabled {
  color: #4b4b4b;
  /* Серый цвет текста */
  cursor: not-allowed;
  /* Курсор в виде запрещающего знака */
  pointer-events: none;
  /* элемент перестает реагировать на клики мышкой */
  opacity: 0.5;
  /* Полупрозрачность для наглядности */
}

/* Форма отправки внизу */
.chat-input-area {
  position: relative;
  display: flex;
  flex-direction: row;
  padding: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  border-top: 1px solid #eee;
  display: flex;
  gap: 10px;
}

body.dark-theme .chat-input-area {
  background-color: #0d2f53;
  border-top: #fff solid 1px;
}


.chat-input-area textarea {
  flex: 1;
  padding: 12px;
  border: 1px solid #b4b4b4;
  border-radius: 6px;
  outline: none;
}

.chat-input-area textarea:focus {
  border-color: #007bff;
  box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.1);
  /* Мягкое свечение вокруг */
}

.send-btn {
  font-family: Arial, Helvetica, sans-serif;
  background: #007bff;
  color: white;
  border: none;
  box-shadow: 0 2px 3px rgba(0, 123, 255, 0.4);
  border-radius: 12px;
  cursor: pointer;
  transition: background 0.3s;
  text-align: center;
  font-weight: bold;
  font-width: 0.8rem;
  font-size: 1.5rem;
  width: 35px;
  padding-left: 10px;
}

body.dark-theme .send-btn {
  background: rgba(0, 54, 68, 0.6);
  color: rgb(6 51 237);
  border: #999696 2px solid !important;
  padding-left: 8px;
  background-image: radial-gradient(ellipse at center,
      rgba(255, 255, 255, 1.0) 0%,
      rgba(255, 255, 255, 0) 70%);
}

@media (hover: hover) {
  .send-btn:hover {
    background: #0056b3;
  }
}

@media (max-width: 768px) {
  .send-btn {
    touch-action: manipulation;
  }
}

.light {
  color: white;
  background: #007bff;
  box-shadow: #007bff;
  max-width: 35px;
  padding: 0;
  background-image: radial-gradient(ellipse at center,
      rgba(255, 255, 255, 1.0) 0%,
      rgba(255, 255, 255, 0) 50%);

}

body.dark-theme .send-btn:hover {
  color: #fff;
  background: rgb(6 51 237);
}

body.dark-theme .light {
  padding-right: 5px;
  padding-left: 0;
}

.switch {
  position: relative;
  display: inline-block;
  width: 40px;
  /* Ширина тумблера */
  height: 24px;
  /* Высота тумблера */
}

.switch input {
  opacity: 0;
  /* Прячем стандартный чекбокс */
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  transition: .4s;
  border-radius: 24px;
  /* Закругление */
}

.slider:before {
  position: absolute;
  content: "";
  height: 16px;
  /* Размер кружка */
  width: 16px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  transition: .4s;
  border-radius: 50%;
}

/* Состояние при включении */
input:checked+.slider {
  background-color: #2196F3;
}

input:checked+.slider:before {
  transform: translateX(16px);
  /* Сдвиг кружка */
}

.switch-container {
  padding-top: 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* Выравнивает текст и тумблер по центру */
  gap: 2px;
  /* Отступ между текстом и выключателем */
  font-family: sans-serif;
  cursor: pointer;
}

.switch-label {
  color: #fff;
  font-size: 0.6rem;
}

/* Выползающая информационная панель со списком активных пользователей и активных задач */
.sliding-panel {
  position: absolute;
  top: 100%;
  /* Появляется сразу под хедером */
  left: 0;
  width: 100%;
  max-width: 100%;
  overflow: hidden;
  background: #f4f4f4;
  color: #333;
  overflow: hidden;
  /* Скрываем контент, когда высота 0 */
  max-height: 0;
  /* Начальное состояние — скрыто */
  transition: height 0.5s ease;
  /* Плавное выпадание */
  z-index: 5;
  /* Панель под хедером */
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  font-size: 1.2rem;
  vertical-align: top;
  text-align: left;
  opacity: 0;
  visibility: hidden;
  transition: opacity 1s ease, visibility 1s;
}

/* панель раскрывается */
.panel-opened {
  transition: opacity 1s ease, visibility 1s;
  height: 500px;
  min-height: calc(100vh - 125px);
  max-height: calc(100% - 80px);
  box-sizing: border-box;
  overflow: visible;
  transition: height 5s ease-out;
  opacity: 1;
  visibility: visible;
}

.header:hover::after {
  overflow: scroll;
}


.spisok {
  padding: 0 3px 0 10px;
  font-family: 'Courier New', Courier;
  font-size: 1.2rem;
  max-height: calc(100% - 80px);
}


#messtext_inp {
  width: 100%;
  height: 60px;
  padding: 5px;
  font-size: 1.05rem;
  font-family: Arial, sans-serif;
  border-radius: 5px;
  border: 2px solid hsl(0, 0%, 59%);
}


.hidden {
  display: none !important;
}

.blue-button {
  color: #fff;
  background: #007bff;
  margin-left: 10px;
  height: 30px;
  padding: 8px;
  border-radius: 8px;
  border: 1px solid #ccc;
  cursor: pointer;
}

.blue-button:hover {
  background: rgb(6 51 237);
}

#status {
  margin-top: 0;
  padding-top: 0;
  font-size: 0.8rem;
}


/* Стили для кнопки */
.theme-toggle {
  min-width: 35px;
  min-height: 32px;
  margin-top: 5px;
  margin-right: 10px;
  padding: 0;
  border-radius: 3px;
  border-color: #fff;
  padding: 1px 3px 0 3px;
  /* background: none;
  border: none; */
  cursor: pointer;
  /* padding: 8px;
  color: #333;   Цвет иконок в светлой теме */
}

/* По умолчанию (светлая тема) скрываем солнце */
.theme-toggle .sun {
  display: none;
}

body.dark-theme .theme-toggle {
  color: #ffcc00;
  /* Цвет иконки солнца */
}

/* Переключаем видимость */
body.dark-theme .moon {
  display: none;
}

body.dark-theme .sun {
  display: block;
}

.up-button {
  min-width: 35px;
  min-height: 32px;
  margin-top: 5px;
  margin-right: 10px;
  padding: 0;
  border-radius: 3px;
  border-color: #fff;
  padding: 1px 3px 0 3px;
}

.up-btn-text {
  color: hsl(258, 98%, 18%);
  font-size: 1.2rem;
  text-shadow: 2px 2px 2px #fff;
  padding-bottom: 1px;

}
/* ... */

